add to css: .list-horizontal { li {

--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,13 @@ body {
   font-weight: bold;
 }
 
+.list-horizontal {
+  li {
+    display: inline-block;
+    margin-right: 10px;
+  }
+}
+
 .list-horizontal li {
   display: inline-block;
 }
