--- a/sass/style.scss
+++ b/sass/style.scss
@@ -119,3 +119,29 @@ body {
     margin: 0 10px 0 0;
   }
 }
+
+/* list various font-size for classes */
+.tag-size-1 {
+  font-size: 12px;
+}
+
+.tag-size-2 {
+  font-size: 14px;
+}
+
+.tag-size-3 {
+  font-size: 16px;
+}
+
+.tag-size-4 {
+  font-size: 20px;
+}
+
+.tag-size-5 {
+  font-size: 25px;
+}
+
+.sidebar .list.tags li {
+  display: inline-block;
+  margin: 10px;
+}
